Incorparada clase comentario y los fragmentos que manejan los festivales. Los comentarios se suben a la base de datos con un id propio. La descarga de los comentarios se realiza en recicleview usando un adapter para el comentario.

--- a/Festivaly/app/src/main/res/values/colors.xml
+++ b/Festivaly/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#4B4B4B</color>
+    <color name="poner_comentario">#EAEAEA</color>
 </resources>
