--- a/Festivaly/app/src/main/res/layout/content_actividad_principal.xml
+++ b/Festivaly/app/src/main/res/layout/content_actividad_principal.xml
@@ -9,8 +9,16 @@
     tools:showIn="@layout/app_bar_actividad_principal">
 
     <FrameLayout
-        android:layout_width="436dp"
-        android:layout_height="674dp">
+        android:id="@+id/contenedor_fragmentos"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/navigation"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.491"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
     </FrameLayout>
 
