--- a/Festivaly/app/src/main/res/layout/festivales.xml
+++ b/Festivaly/app/src/main/res/layout/festivales.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center_horizontal"
     android:orientation="vertical">
-
-    <SearchView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-    </SearchView>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,7 +12,6 @@
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
             android:gravity="center">
 
             <TableRow
@@ -28,14 +21,58 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/botonFestival1"
                     android:layout_width="145dp"
                     android:layout_height="145dp"
                     android:layout_margin="10dp"
                     android:text="Button" />
 
                 <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/botonFestival2"
+                    android:layout_width="145dp"
+                    android:layout_height="145dp"
+                    android:layout_margin="10dp"
+                    android:text="Button" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/botonFestival3"
+                    android:layout_width="145dp"
+                    android:layout_height="145dp"
+                    android:layout_margin="10dp"
+                    android:text="Button" />
+
+                <Button
+                    android:id="@+id/botonFestival4"
+                    android:layout_width="145dp"
+                    android:layout_height="145dp"
+                    android:layout_margin="10dp"
+                    android:text="Button" />
+
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/botonFestival5"
+                    android:layout_width="145dp"
+                    android:layout_height="145dp"
+                    android:layout_margin="10dp"
+                    android:text="Button" />
+
+                <Button
+                    android:id="@+id/botonFestival6"
                     android:layout_width="145dp"
                     android:layout_height="145dp"
                     android:layout_margin="10dp"
@@ -72,58 +109,14 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/button3"
+                    android:id="@+id/button5"
                     android:layout_width="145dp"
                     android:layout_height="145dp"
                     android:layout_margin="10dp"
                     android:text="Button" />
 
                 <Button
-                    android:id="@+id/button4"
-                    android:layout_width="145dp"
-                    android:layout_height="145dp"
-                    android:layout_margin="10dp"
-                    android:text="Button" />
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/button3"
-                    android:layout_width="145dp"
-                    android:layout_height="145dp"
-                    android:layout_margin="10dp"
-                    android:text="Button" />
-
-                <Button
-                    android:id="@+id/button4"
-                    android:layout_width="145dp"
-                    android:layout_height="145dp"
-                    android:layout_margin="10dp"
-                    android:text="Button" />
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/button3"
-                    android:layout_width="145dp"
-                    android:layout_height="145dp"
-                    android:layout_margin="10dp"
-                    android:text="Button" />
-
-                <Button
-                    android:id="@+id/button4"
+                    android:id="@+id/button6"
                     android:layout_width="145dp"
                     android:layout_height="145dp"
                     android:layout_margin="10dp"
