--- a/Festivaly/app/src/main/res/values/colors.xml
+++ b/Festivaly/app/src/main/res/values/colors.xml
@@ -3,5 +3,6 @@
     <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#4B4B4B</color>
-    <color name="poner_comentario">#EAEAEA</color>
+    <color name="poner_comentario">#000000</color>
+    <color name="grisClaro">#D2D2D2</color>
 </resources>
