--- a/Festivaly/app/src/main/res/layout/chat_mensaje.xml
+++ b/Festivaly/app/src/main/res/layout/chat_mensaje.xml
@@ -24,7 +24,7 @@
             tools:srcCompat="@tools:sample/avatars[10]" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="293dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:background="@color/common_google_signin_btn_text_dark_default"
@@ -85,53 +85,14 @@
                 android:inputType="textMultiLine|text"
                 android:maxLines="3" />
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="10dp"
-                android:layout_marginBottom="10dp"
-                android:background="@color/common_google_signin_btn_text_dark_default"
-                android:orientation="vertical">
-
-                <TableLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                    <TableRow
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:orientation="horizontal">
-
-                        <Button
-                            android:id="@+id/botonRespuesta"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_marginRight="70dp"
-                            android:background="@drawable/respuesta"
-                            android:clickable="true" />
-
-                        <Button
-                            android:id="@+id/botonFavorito"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_marginRight="70dp"
-                            android:background="@drawable/favorito" />
-
-                        <Button
-                            android:id="@+id/botonMensajePrivado"
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_weight="1"
-                            android:background="@drawable/mensajeprivado" />
-                    </TableRow>
-
-                </TableLayout>
-            </LinearLayout>
-
         </LinearLayout>
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_notifications_black_24dp" />
 
     </LinearLayout>
 
