--- a/Festivaly/app/src/main/res/layout/entrada_escritura_comentarios.xml
+++ b/Festivaly/app/src/main/res/layout/entrada_escritura_comentarios.xml
@@ -26,9 +26,11 @@
             android:layout_weight="1"
             android:background="@null"
             android:ems="10"
+            android:hint="¿Qué te apetece?"
             android:inputType="textMultiLine"
             android:maxLines="3"
             android:textAllCaps="false"
+            android:textSize="14sp"
             android:visibility="gone" />
     </LinearLayout>
 
