--- a/Festivaly/app/src/main/res/layout/fragment_festival_admin.xml
+++ b/Festivaly/app/src/main/res/layout/fragment_festival_admin.xml
@@ -10,7 +10,7 @@
 
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/lista_anuncios"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
