--- a/Festivaly/app/src/main/res/menu/navigation.xml
+++ b/Festivaly/app/src/main/res/menu/navigation.xml
@@ -4,16 +4,19 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_black_24dp"
+        android:enabled="true"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_notifications"
         android:icon="@drawable/ic_notifications_black_24dp"
+        android:enabled="true"
         android:title="@string/title_dashboard" />
 
     <item
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_perfil"
         android:icon="@drawable/ic_menu_send"
+        android:enabled="true"
         android:title="@string/title_notifications" />
 
 </menu>
