--- a/Festivaly/app/src/main/res/layout/register_datos_usuario.xml
+++ b/Festivaly/app/src/main/res/layout/register_datos_usuario.xml
@@ -29,7 +29,7 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="140dp"
                 android:layout_height="140dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginBottom="10dp"
                 android:background="@drawable/user"
                 android:paddingTop="30dp" />
@@ -65,7 +65,7 @@
                 android:layout_marginTop="20dp"
                 android:gravity="bottom"
                 android:hint="Telefono"
-                android:inputType="textPhonetic"
+                android:inputType="number"
                 android:selectAllOnFocus="false"
                 android:singleLine="false" />
 
@@ -74,7 +74,7 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="45dp"
                 android:layout_height="37dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="50dp"
                 android:layout_marginBottom="50dp"
                 android:background="@drawable/next"
                 android:paddingTop="30dp" />
